--- a/portfolio.html
+++ b/portfolio.html
@@ -36,10 +36,70 @@
       </nav>
     </header>
 
+    <main>
+     <section>
+      <h1>Наши работы</h1>
+      <div class="filter">
+        <button type="button" class="button-filter">Все</button>
+        <button type="button" class="button-filter">Веб-сайты</button>
+        <button type="button" class="button-filter">Приложения</button>
+        <button type="button" class="button-filter">Дизайн</button>
+        <button type="button" class="button-filter">Маркетинг</button>
+      </div>
+      <ul>
+        <li>
+          <a href="#"><img src="./images/technokriak.jpg" alt="Сайт Технокряк" width="370 px"></a>
+          <h2>Технокряк</h2>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/nba.jpg" alt="Постер" width="370 px"></a>
+          <h2>Постер New Orlean vs Golden Star</h2>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/seafood.jpg" alt="seafood" width="370 px"></a>
+          <h2>Ресторан Seafood</h2>
+          <p>Приложения</p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/prime.jpg" alt="prime" width="370 px"></a>
+          <h2>Проект Prime</h2>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/boxes.jpg" alt="Проект Boxes" width="370 px"></a>
+          <h2>Проект Boxes</h2>
+          <p>Приложения/p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/borders.jpg" alt="Borders" width="370 px"></a>
+          <h2>Inspiration has no Borders</h2>
+          <p>Приложения/p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/limited.jpg" alt="limited" width="370 px"></a>
+          <h2>Издание Limited Edition</h2>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/lab.jpg" alt="Проект LAB" width="370 px"></a>
+          <h2>Проект LAB</h2>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <a href="#"><img src="./images/growing.jpg" alt="Growing Business" width="370 px"></a>
+          <h2>Growing Business</h2>
+          <p>Приложения</p>
+        </li>
+      </ul>
+     </section>
+    </main>
+
     <footer>
         <a href="./index.html">WebStudio</a>
         <address>
-          <ul>
+          <ul class="site-nav list">
             <li>
               <a
                 href="https://bit.ly/3pXMvUd"
