--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
@@ -13,7 +14,7 @@
         <!-- Logo -->
         <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <!-- main -->
-        <ul class="site-nav list">
+        <ul class="site-nav">
           <li>
             <a href="./index.html" class="link current"> Студия </a>
           </li>
@@ -25,7 +26,7 @@
           </li>
         </ul>
         <!-- adress -->
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li>
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
@@ -44,7 +45,7 @@
       </section>
       <!-- what we do -->
       <section class="feature">
-        <h2>Преимущества</h2>
+        <h2 class="section-title">Преимущества</h2>
           <ul>
             <li>
               <h3 class="feature-title">Внимание к деталям</h3>
@@ -54,21 +55,21 @@
               </p>
             </li>
             <li>
-              <h3>Пунктуальность</h3>
+              <h3 class="feature-title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
             <li>
-              <h3>Планирование</h3>
+              <h3 class="feature-title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
             <li>
-              <h3>Современные технологии</h3>
+              <h3 class="feature-title">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -101,23 +102,23 @@
           <ul>
             <li>
               <img src="./images/team-1.jpg" alt="продакт менеджер" width="270" />
-              <h3>Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <h3 class="team-title">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
             </li>
             <li>
               <img src="./images/team-2.jpg" alt="фронт разработчик" width="270" />
-              <h3>Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <h3 class="team-title">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
             </li>
             <li>
               <img src="./images/team-3.jpg" alt="маркетолог" width="270" />
-              <h3>Николай Тарасов</h3>
-              <p>Marketing</p>
+              <h3 class="team-title">Николай Тарасов</h3>
+              <p class="team-text">Marketing</p>
             </li>
             <li>
               <img src="./images/team-4.jpg" alt="дизайнер" width="270" />
-              <h3>Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <h3 class="team-title">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
             </li>
           </ul>
       </section>
