--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -13,7 +14,7 @@
         <!-- Logo -->
         <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <!-- main -->
-        <ul class="site-nav list">
+        <ul class="site-nav">
           <li>
             <a href="./index.html"> Студия </a>
           </li>
@@ -25,7 +26,7 @@
           </li>
         </ul>
         <!-- adress -->
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li>
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
@@ -38,58 +39,58 @@
 
     <main>
      <section>
-      <h1>Наши работы</h1>
-      <div class="filter">
-        <button type="button" class="button-filter">Все</button>
-        <button type="button" class="button-filter">Веб-сайты</button>
-        <button type="button" class="button-filter">Приложения</button>
-        <button type="button" class="button-filter">Дизайн</button>
-        <button type="button" class="button-filter">Маркетинг</button>
-      </div>
+      <h1 class="section-title">Наши работы</h1>
+      <ul>
+        <li><button type="button" class="button-filter">Все</button></li>
+        <li><button type="button" class="button-filter">Веб-сайты</button></li>
+        <li><button type="button" class="button-filter">Приложения</button></li>
+        <li><button type="button" class="button-filter">Дизайн</button></li>
+        <li><button type="button" class="button-filter">Маркетинг</button></li>
+      </ul>
       <ul>
         <li>
-          <a href="#"><img src="./images/technokriak.jpg" alt="Сайт Технокряк" width="370 px"></a>
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
+          <a href="#"><img src="./images/technokriak.jpg" alt="Сайт Технокряк" width="370"></a>
+          <h2 class="portfolio-title">Технокряк</h2>
+          <p class="portfolio-text">Веб-сайт</p>
         </li>
         <li>
-          <a href="#"><img src="./images/nba.jpg" alt="Постер" width="370 px"></a>
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
+          <a href="#"><img src="./images/nba.jpg" alt="Постер" width="370"></a>
+          <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+          <p class="portfolio-text">Дизайн</p>
         </li>
         <li>
-          <a href="#"><img src="./images/seafood.jpg" alt="seafood" width="370 px"></a>
-          <h2>Ресторан Seafood</h2>
-          <p>Приложения</p>
+          <a href="#"><img src="./images/seafood.jpg" alt="seafood" width="370"></a>
+          <h2 class="portfolio-title">Ресторан Seafood</h2>
+          <p class="portfolio-text">Приложения</p>
         </li>
         <li>
-          <a href="#"><img src="./images/prime.jpg" alt="prime" width="370 px"></a>
-          <h2>Проект Prime</h2>
-          <p>Маркетинг</p>
+          <a href="#"><img src="./images/prime.jpg" alt="prime" width="370"></a>
+          <h2 class="portfolio-title">Проект Prime</h2>
+          <p class="portfolio-text">Маркетинг</p>
         </li>
         <li>
-          <a href="#"><img src="./images/boxes.jpg" alt="Проект Boxes" width="370 px"></a>
-          <h2>Проект Boxes</h2>
-          <p>Приложения/p>
+          <a href="#"><img src="./images/boxes.jpg" alt="Проект Boxes" width="370"></a>
+          <h2 class="portfolio-title">Проект Boxes</h2>
+          <p class="portfolio-text">Приложения/p>
         </li>
         <li>
-          <a href="#"><img src="./images/borders.jpg" alt="Borders" width="370 px"></a>
-          <h2>Inspiration has no Borders</h2>
-          <p>Приложения/p>
+          <a href="#"><img src="./images/borders.jpg" alt="Borders" width="370"></a>
+          <h2 class="portfolio-title">Inspiration has no Borders</h2>
+          <p class="portfolio-text">Приложения/p>
         </li>
         <li>
-          <a href="#"><img src="./images/limited.jpg" alt="limited" width="370 px"></a>
-          <h2>Издание Limited Edition</h2>
-          <p>Дизайн</p>
+          <a href="#"><img src="./images/limited.jpg" alt="limited" width="370"></a>
+          <h2 class="portfolio-title">Издание Limited Edition</h2>
+          <p class="portfolio-text">Дизайн</p>
         </li>
         <li>
-          <a href="#"><img src="./images/lab.jpg" alt="Проект LAB" width="370 px"></a>
-          <h2>Проект LAB</h2>
-          <p>Маркетинг</p>
+          <a href="#"><img src="./images/lab.jpg" alt="Проект LAB" width="370"></a>
+          <h2 class="portfolio-title">Проект LAB</h2>
+          <p class="portfolio-text">Маркетинг</p>
         </li>
         <li>
-          <a href="#"><img src="./images/growing.jpg" alt="Growing Business" width="370 px"></a>
-          <h2>Growing Business</h2>
+          <a href="#"><img src="./images/growing.jpg" alt="Growing Business" width="370"></a>
+          <h2 class="portfolio-title">Growing Business</h2>
           <p>Приложения</p>
         </li>
       </ul>
@@ -97,9 +98,9 @@
     </main>
 
     <footer>
-        <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <address>
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li>
               <a
                 href="https://bit.ly/3pXMvUd"
