--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
         <!-- Logo -->
         <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <!-- main -->
-        <ul class="site-nav">
+        <ul class="list">
           <li>
-            <a href="./index.html" class="link current"> Студия </a>
+            <a href="./index.html" class="nav-link link current"> Студия </a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="nav-link link">Портфолио</a>
           </li>
           <li>
-            <a href="./contact.html">Контакты</a>
+            <a href="./contact.html" class="nav-link link">Контакты</a>
           </li>
         </ul>
         <!-- adress -->
-          <ul class="site-nav">
+          <ul class="list">
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a>
             </li>
           </ul>
       </nav>
@@ -45,32 +45,32 @@
       </section>
       <!-- what we do -->
       <section class="feature">
-        <h2 class="section-title">Преимущества</h2>
-          <ul>
+        <h2 class="section-title visually-hidden">Преимущества</h2>
+          <ul class="list"> 
             <li>
               <h3 class="feature-title">Внимание к деталям</h3>
-              <p>
+              <p class="feature-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
             <li>
               <h3 class="feature-title">Пунктуальность</h3>
-              <p>
+              <p class="feature-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
             <li>
               <h3 class="feature-title">Планирование</h3>
-              <p>
+              <p class="feature-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
             <li>
               <h3 class="feature-title">Современные технологии</h3>
-              <p>
+              <p class="feature-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -80,17 +80,17 @@
         <!-- images what we do -->
         <section class="section">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul>
+          <ul class="list">
             <li>
               <img src="./images/img.jpg" alt="ноутбук" width="370" />
             </li>
           </ul>
-          <ul>
+          <ul class="list">
             <li>
               <img src="./images/img-2.jpg" alt="ноут и телефон" width="370" />
             </li>
           </ul>
-          <ul>
+          <ul class="list">
             <li>
               <img src="./images/img-3.jpg" alt="палитра" width="370" />
             </li>
@@ -99,7 +99,7 @@
       <!-- our team -->
       <section class="section">
           <h2 class="section-title">Наша команда</h2>
-          <ul>
+          <ul class="list ">
             <li>
               <img src="./images/team-1.jpg" alt="продакт менеджер" width="270" />
               <h3 class="team-title">Игорь Демьяненко</h3>
@@ -125,22 +125,22 @@
     </main>
 
     <footer>
-      <a href="./index.html"  class="logo"><span class="logo-web">Web</span>Studio</a>
+      <a href="./index.html"  class="logo-footer"><span class="logo-web">Web</span>Studio</a>
       <address>
-        <ul class="site-nav">
+        <ul class="list">
           <li>
             <a
               href="https://bit.ly/3pXMvUd"
               target="_blank"
-              rel="noopener noreferrer"
+              rel="noopener noreferrer" class="address-map link"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" class="address-contact link">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a href="tel:+380991111111" class="address-contact link">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
