--- a/portfolio.html
+++ b/portfolio.html
@@ -14,24 +14,24 @@
         <!-- Logo -->
         <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <!-- main -->
-        <ul class="site-nav">
+        <ul class="list">
           <li>
-            <a href="./index.html"> Студия </a>
+            <a href="./index.html" class="nav-link link"> Студия </a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link current">Портфолио</a>
+            <a href="./portfolio.html" class="nav-link link link current">Портфолио</a>
           </li>
           <li>
-            <a href="./contact.html">Контакты</a>
+            <a href="./contact.html" class="nav-link link">Контакты</a>
           </li>
         </ul>
         <!-- adress -->
-          <ul class="site-nav">
+          <ul class="list">
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a>
             </li>
           </ul>
       </nav>
@@ -39,15 +39,15 @@
 
     <main>
      <section>
-      <h1 class="section-title">Наши работы</h1>
-      <ul>
-        <li><button type="button" class="button-filter">Все</button></li>
+      <h1 class="section-title visually-hidden">Наши работы</h1>
+      <ul class="list">
+        <li><button type="button" class="button-filter :active">Все</button></li>
         <li><button type="button" class="button-filter">Веб-сайты</button></li>
         <li><button type="button" class="button-filter">Приложения</button></li>
         <li><button type="button" class="button-filter">Дизайн</button></li>
         <li><button type="button" class="button-filter">Маркетинг</button></li>
       </ul>
-      <ul>
+      <ul class="list">
         <li>
           <a href="#"><img src="./images/technokriak.jpg" alt="Сайт Технокряк" width="370"></a>
           <h2 class="portfolio-title">Технокряк</h2>
@@ -98,25 +98,25 @@
     </main>
 
     <footer>
-      <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
-        <address>
-          <ul class="site-nav">
-            <li>
-              <a
-                href="https://bit.ly/3pXMvUd"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-              <a href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </footer>
+      <a href="./index.html"  class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+      <address>
+        <ul class="list">
+          <li>
+            <a
+              href="https://bit.ly/3pXMvUd"
+              target="_blank"
+              rel="noopener noreferrer" class="address-map link"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="address-contact link">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="address-contact link">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
     </body>
   </html>
