--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- main -->
         <ul class="list">
           <li>
-            <a href="./index.html" class="nav-link link current"> Студия </a>
+            <a href="./index.html" class="nav-link link currentlink"> Студия </a>
           </li>
           <li>
             <a href="./portfolio.html" class="nav-link link">Портфолио</a>
