--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <a href="./index.html" class="nav-link link"> Студия </a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-link link link current">Портфолио</a>
+            <a href="./portfolio.html" class="nav-link link currentlink">Портфолио</a>
           </li>
           <li>
             <a href="./contact.html" class="nav-link link">Контакты</a>
@@ -41,7 +41,7 @@
      <section>
       <h1 class="section-title visually-hidden">Наши работы</h1>
       <ul class="list">
-        <li><button type="button" class="button-filter :active">Все</button></li>
+        <li><button type="button" class="button-filter active">Все</button></li>
         <li><button type="button" class="button-filter">Веб-сайты</button></li>
         <li><button type="button" class="button-filter">Приложения</button></li>
         <li><button type="button" class="button-filter">Дизайн</button></li>
