--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <!-- adress -->
           <ul class="list">
             <li>
-              <a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a>
             </li>
           </ul>
       </nav>
