--- a/portfolio.html
+++ b/portfolio.html
@@ -6,98 +6,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="container main-nav">
         <!-- Logo -->
         <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         <!-- main -->
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="nav-link link"> Студия </a>
+        <ul class="site-nav list">
+          <li class="item">
+            <a href="./index.html" class="nav-link link currentlink"> Студия </a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link currentlink">Портфолио</a>
+          <li class="item">
+            <a href="./portfolio.html" class="nav-link link">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="./contact.html" class="nav-link link">Контакты</a>
           </li>
         </ul>
         <!-- adress -->
-          <ul class="list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a>
+          <ul class="contact-nav list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a>
+            <li class="item">
+              <a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a>
             </li>
           </ul>
       </nav>
     </header>
 
     <main>
-     <section>
+     <section class="portfolio">
+      <div class="container">
       <h1 class="section-title visually-hidden">Наши работы</h1>
-      <ul class="list">
-        <li><button type="button" class="button-filter active">Все</button></li>
-        <li><button type="button" class="button-filter">Веб-сайты</button></li>
-        <li><button type="button" class="button-filter">Приложения</button></li>
-        <li><button type="button" class="button-filter">Дизайн</button></li>
-        <li><button type="button" class="button-filter">Маркетинг</button></li>
+      <ul class="button-nav list">
+        <li class="button-item"><button type="button" class="button-filter active">Все</button></li>
+        <li class="button-item"><button type="button" class="button-filter">Веб-сайты</button></li>
+        <li class="button-item"><button type="button" class="button-filter">Приложения</button></li>
+        <li class="button-item"><button type="button" class="button-filter">Дизайн</button></li>
+        <li class="button-item"><button type="button" class="button-filter">Маркетинг</button></li>
       </ul>
-      <ul class="list">
-        <li>
+      <ul class="portfolio-section list">
+        <li class="portfolio-item">
           <a href="#"><img src="./images/technokriak.jpg" alt="Сайт Технокряк" width="370"></a>
           <h2 class="portfolio-title">Технокряк</h2>
           <p class="portfolio-text">Веб-сайт</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/nba.jpg" alt="Постер" width="370"></a>
           <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
           <p class="portfolio-text">Дизайн</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/seafood.jpg" alt="seafood" width="370"></a>
           <h2 class="portfolio-title">Ресторан Seafood</h2>
           <p class="portfolio-text">Приложения</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/prime.jpg" alt="prime" width="370"></a>
           <h2 class="portfolio-title">Проект Prime</h2>
           <p class="portfolio-text">Маркетинг</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/boxes.jpg" alt="Проект Boxes" width="370"></a>
           <h2 class="portfolio-title">Проект Boxes</h2>
-          <p class="portfolio-text">Приложения/p>
+          <p class="portfolio-text">Приложения</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/borders.jpg" alt="Borders" width="370"></a>
           <h2 class="portfolio-title">Inspiration has no Borders</h2>
-          <p class="portfolio-text">Приложения/p>
+          <p class="portfolio-text">Приложения</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/limited.jpg" alt="limited" width="370"></a>
           <h2 class="portfolio-title">Издание Limited Edition</h2>
           <p class="portfolio-text">Дизайн</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/lab.jpg" alt="Проект LAB" width="370"></a>
           <h2 class="portfolio-title">Проект LAB</h2>
           <p class="portfolio-text">Маркетинг</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href="#"><img src="./images/growing.jpg" alt="Growing Business" width="370"></a>
           <h2 class="portfolio-title">Growing Business</h2>
           <p>Приложения</p>
         </li>
       </ul>
+    </div>
      </section>
     </main>
 
     <footer>
+      <div class="container">
       <a href="./index.html"  class="logo-footer"><span class="logo-web">Web</span>Studio</a>
       <address>
         <ul class="list">
@@ -117,6 +121,7 @@
           </li>
         </ul>
       </address>
+    </div>
     </footer>
     </body>
   </html>
